--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
         <br/>
         • <a href="https://github.com/maierfelix/nvk">Vulkan JavaScript API</a> <code lang="c++"></code> <code lang="js"></code> <code lang="vulkan"></code> <br/>
         • <a href="https://github.com/maierfelix/nvk-examples">Vulkan JavaScript API examples</a> <code lang="js"></code> <code lang="vulkan"></code> <br/>
+        • <a href="https://github.com/maierfelix/tiny-rtx">Vulkan based RTX Real-Time Ray Tracer</a> <code lang="js"></code> <code lang="vulkan"></code> <br/>
         <br/>
         VR related:
         <br/>
