--- a/index.html
+++ b/index.html
@@ -66,6 +66,7 @@
         <br/>
         Game related:
         <br/>
+        • <a href="https://www.youtube.com/channel/UC5bMVzJRThGgpYSkNj3cdwQ">PokeCraft (Wrote the Rendering Engine)</a><code lang="js"></code><code lang="webgl"></code><br>
         • <a href="https://www.youtube.com/watch?v=-COtECNb8lo">A WebGL Pokemon Map Editor</a> <code lang="js"></code> <code lang="webgl"></code><br/>
         • <a href="https://github.com/maierfelix/pokemmo">WebGL Pokemon Engine</a> <code lang="js"></code> <code lang="webgl"></code><br/>
         • <a href="https://github.com/maierfelix/pogoserver">Pokemon GO Server Emulator</a> <code lang="js"></code><br/>
