--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
         <br/>
         • <a href="https://github.com/maierfelix/pokemon-emerald-rom-hacking">Pokemon Emerald ROM Hacking Kit</a> <code lang="js"></code><br/>
         <br/>
-        Game related:
+        Game Development related:
         <br/>
         • <a href="https://www.youtube.com/channel/UC5bMVzJRThGgpYSkNj3cdwQ">PokeCraft (Wrote the Rendering Engine)</a><code lang="js"></code><code lang="webgl"></code><br>
         • <a href="https://www.youtube.com/watch?v=-COtECNb8lo">A WebGL Pokemon Map Editor</a> <code lang="js"></code> <code lang="webgl"></code><br/>
