--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       <br/>
       <br/>
       <center>
-        I'm Felix Maier and currently live in Heidelberg, Germany. <br/>
+        I'm Felix Maier and currently live in Tübingen, Germany. <br/>
       </center>
     </div>
 
@@ -34,6 +34,8 @@
         • <a href="https://github.com/maierfelix/nvk">Vulkan JavaScript API</a> <code lang="c++"></code> <code lang="js"></code> <code lang="vulkan"></code> <br/>
         • <a href="https://github.com/maierfelix/nvk-examples">Vulkan JavaScript API examples</a> <code lang="js"></code> <code lang="vulkan"></code> <br/>
         • <a href="https://github.com/maierfelix/tiny-rtx">Vulkan based RTX Real-Time Ray Tracer</a> <code lang="js"></code> <code lang="vulkan"></code> <br/>
+        • <a href="https://github.com/maierfelix/momo">Vulkan based RTX Real-Time Path Tracer</a> <code lang="js"></code> <code lang="vulkan"></code> <br/>
+        • <a href="https://github.com/maierfelix/https://github.com/maierfelix/nvk-optix-denoiser">Optix AI Denoiser for node-vulkan</a> <code lang="c++"></code> <code lang="vulkan"></code> <br/>
         <br/>
         VR related:
         <br/>
