--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         • <a href="https://github.com/maierfelix/nvk-examples">Vulkan JavaScript API examples</a> <code lang="js"></code> <code lang="vulkan"></code> <br/>
         • <a href="https://github.com/maierfelix/tiny-rtx">Vulkan based RTX Real-Time Ray Tracer</a> <code lang="js"></code> <code lang="vulkan"></code> <br/>
         • <a href="https://github.com/maierfelix/momo">Vulkan based RTX Real-Time Path Tracer</a> <code lang="js"></code> <code lang="vulkan"></code> <br/>
-        • <a href="https://github.com/maierfelix/https://github.com/maierfelix/nvk-optix-denoiser">Optix AI Denoiser for node-vulkan</a> <code lang="c++"></code> <code lang="vulkan"></code> <br/>
+        • <a href="https://github.com/maierfelix/nvk-optix-denoiser">Optix AI Denoiser for node-vulkan</a> <code lang="c++"></code> <code lang="vulkan"></code> <br/>
         <br/>
         VR related:
         <br/>
