--- a/index.html
+++ b/index.html
@@ -29,6 +29,10 @@
       <br/>
       <br/>
       <center>
+        WebGPU related:
+        <br/>
+        • <a href="https://github.com/maierfelix/webgpu">WebGPU API for Node</a> <code lang="js"></code> <code lang="webgpu"></code> <br/>
+        <br/>
         Vulkan related:
         <br/>
         • <a href="https://github.com/maierfelix/nvk">Vulkan JavaScript API</a> <code lang="c++"></code> <code lang="js"></code> <code lang="vulkan"></code> <br/>
@@ -201,6 +205,10 @@
       code[lang="vulkan"]:before {
         content: "Vulkan";
         color: rgb(195, 54, 60);
+      }
+      code[lang="webgpu"]:before {
+        content: "WebGPU";
+        color: rgb(112, 243, 134);
       }
     </style>
 
