--- a/index.html
+++ b/index.html
@@ -107,6 +107,7 @@
         Links:
         <br/>
         <a href="https://github.com/maierfelix">Github</a>,
+        <a href="https://twitter.com/felixmaier96">Twitter</a>,
         <a href="mailto:xilefmai@gmail.com">Email</a>
         <br/>
         <br/>
